--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@react-spring/three": "^10.0.0",
+    "@react-three/drei": "^10.0.8",
+    "@react-three/fiber": "^9.1.2",
     "axios": "^1.9.0",
     "client": "file:",
+    "framer-motion": "^12.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.5.3",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
