--- a/server/.gitignore
+++ b/server/.gitignore
@@ -15,8 +15,8 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 lerna-debug.log*
+.pnpm-debug.log*
 
 # Editor settings
 .vscode/
